# Py7Web

Client_REST_API/source/: api.js
m07_01/docs/: internet.md
m09_01/: config.ini
m09_02/: main_contact.py
m09_02/database/: db.py
m11_Flask/database/: app.db.sqlite
m11_Flask/src/: routes.py
m11_Flask/src/repository/: users.py
m13_Django/: pyproject.toml
m13_Django/notes/noteapp/: models.py  views.py
m13_Django/notes/noteapp/static/noteapp/: style.css
m13_Django/notes/noteapp/templates/noteapp/: index.html  note.html
m13_Django/notes/notes/: settings.py
m15_01/: app.py  app_refresh.py  pyproject.toml
m15_01/config/: config.yaml
m15_01/src/: models.py
m15_01/src/repository/: notes.py  users.py
m15_01/src/routers/: notes.py  users.py
m15_01/src/tests/: test_notes.py
